--- a/templates/layout.html
+++ b/templates/layout.html
@@ -30,7 +30,7 @@
             <div class="grid-33">
                 
                 <!-- Say Hi -->
-                <h1>{% if current_user.is_authenticated() %} {{ current_user.username}}{% endif %}!</h1>
+                <h1>{% if current_user.is_authenticated %} Hello {{ current_user.username}}{% endif %}!</h1>
 
 
 
@@ -39,7 +39,7 @@
             <div class="grid-33">
                 
                 <!-- Log in/Log out -->
-                {% if current_user.is_authenticated() %}
+                {% if current_user.is_authenticated %}
                     <a href="{{ url_for('logout') }}" class="icon-power" title="Log Out"></a>
                 {% else %}
                     <a href="{{ url_for('login') }}" class="icon-power" title="Log In"></a>
@@ -53,12 +53,12 @@
         </header>
         
         <!-- Flash messages -->
-        {% with messages = get_flashed_messages(with_Categories=True) %}
+        {% with messages = get_flashed_messages(with_categories=True) %}
             {% if messages %}
                 {% for category, message in messages %}
                     <div class="notification {{ category }}">{{ message }}</div>
                 {% endfor %}
-            {% end if %}
+            {% endif %}
         {% endwith %}
 
         <div class="row">
