--- a/templates/posts.html
+++ b/templates/posts.html
@@ -5,7 +5,7 @@
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         {% for field in form %}
-            {{ render_field }}
+            {{ render_field(field) }}
         {% endfor %}
         <button type="submit" id="submit">Post!</button>
     </form>
