--- a/templates/stream.html
+++ b/templates/stream.html
@@ -1,15 +1,15 @@
 {% extends "layout.html" %}
 
-{% block name %}
+{% block content %}
 
     {% for post in stream %}
         <article>
             <h2>
-                <a href="{{ url_for('stream, username=post.username') }}">{{ post.user.username }}</a>
+                <a href="{{ url_for('stream', username=post.user.username) }}">{{ post.user.username }}</a>
             </h2>
             <i class="clock"></i>
             <time data-time="{{ post.timestamp }}" class="distime" 
-            datetime={{ post.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}>{{ post.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}</time>
+            datetime="{{ post.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}">{{ post.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}</time>
             <a href="#" class="view">View</a>
             <div class="post">
                 {{ post.content }}
